--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       
       <h2>About Me</h2>
-      <p>Hello! I'm Stephen Ngui, a passionate and creative individual who loves web development and technology. I enjoy building beautiful, functional websites and continuously learning new things.</p>
+      <p>Hello! I'm Stephen Ngui, a third year student at karatina university pursuing bachelors degree in computer and a passionate and creative individual who loves web development and technology. I enjoy building beautiful, functional websites and continuously learning new things.</p>
     </section>
 
     <section id="experience">
@@ -52,6 +52,8 @@
       <ul>
         <li>HTML5 & CSS3</li>
         <li>JavaScript (Basics)</li>
+        <li>SQL basics </li>
+        <li>MongoDB</li>
         <li>Responsive Web Design</li>
         <li>Graphic Design (Canva, Photoshop)</li>
       </ul>
@@ -101,3 +103,4 @@
   </footer>
 </body>
 </html>
+
