--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       
       <h2>About Me</h2>
-      <p>Hello! I'm Stephen Ngui, a third year student at karatina university pursuing bachelors degree in computer and a passionate and creative individual who loves web development and technology. I enjoy building beautiful, functional websites and continuously learning new things.</p>
+      <p>Hello! I'm Stephen Ngui, a third year student at karatina university pursuing bachelors degree in computer science and a passionate and creative individual who loves web development and technology. I enjoy building beautiful, functional websites and continuously learning new things.</p>
     </section>
 
     <section id="experience">
@@ -103,4 +103,5 @@
   </footer>
 </body>
 </html>
+
 
